crates/biome_js_type_info/src/snapshots/biome_js_type_info__flattening__tests__infer_flattened_type_from_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/src/flattening.tests.rs
expression: expr_ty
---
Type(
    Object(
        Object {
            prototype: Some(
                Type(
                    Class(
                        Class {
                            id: TypeId(
                                1,
                            ),
                            name: Some(
                                Static(
                                    "Promise",
                                ),
                            ),
                            type_parameters: [
                                GenericTypeParameter {
                                    name: Static(
                                        "T",
                                    ),
                                    ty: Type(
                                        Number,
                                    ),
                                },
                            ],
                            extends: None,
                        },
                    ),
                ),
            ),
            members: [],
        },
    ),
)
