crates/biome_js_type_info/src/snapshots/biome_js_type_info__flattening__tests__infer_flattened_type_of_async_function.snap
---
source: crates/biome_js_type_info/src/flattening.tests.rs
expression: ty
---
Type(
    Function(
        Function {
            is_async: true,
            type_parameters: [],
            name: Some(
                Borrowed(
                    "returnsPromise",
                ),
            ),
            parameters: [],
            return_type: Type(
                Type(
                    Class(
                        Class {
                            id: TypeId(
                                1,
                            ),
                            name: Some(
                                Static(
                                    "Promise",
                                ),
                            ),
                            type_parameters: [
                                GenericTypeParameter {
                                    name: Static(
                                        "T",
                                    ),
                                    ty: Type(
                                        String,
                                    ),
                                },
                            ],
                            extends: None,
                        },
                    ),
                ),
            ),
        },
    ),
)
