crates/biome_js_type_info/src/snapshots/biome_js_type_info__flattening__tests__infer_flattened_type_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/src/flattening.tests.rs
expression: ty
---
Type(
    Function(
        Function {
            is_async: false,
            type_parameters: [],
            name: Some(
                Borrowed(
                    "returnsPromise",
                ),
            ),
            parameters: [],
            return_type: Type(
                Type(
                    Class(
                        Class {
                            id: TypeId,
                            name: Some(
                                Static(
                                    "Promise",
                                ),
                            ),
                            type_parameters: [
                                GenericTypeParameter {
                                    name: Static(
                                        "T",
                                    ),
                                    ty: Type(
                                        Number,
                                    ),
                                },
                            ],
                            extends: None,
                        },
                    ),
                ),
            ),
        },
    ),
)
